Update Romantic Boyfriend .html

--- a/Romantic Boyfriend .html
+++ b/Romantic Boyfriend .html
@@ -62,7 +62,8 @@
           default: true
        
        
-    }],captions: [
+    }],
+captions: [
         {file:"https://raw.githubusercontent.com/prildavin/khmer/main/ep1.vtt",
           label: "Khmer",
           kind: "captions",
